--- a/conf/production.env.example
+++ b/conf/production.env.example
@@ -1,5 +1,5 @@
 # Plugins to be loaded at launch
-CABOT_PLUGINS_ENABLED=cabot_alert_hipchat==1.6.1,cabot_alert_twilio==1.1.4,cabot_alert_email==1.3.1
+CABOT_PLUGINS_ENABLED=cabot_alert_hipchat==1.6.1,cabot_alert_twilio==1.1.4,cabot_alert_email==1.3.1,cabot_alert_slack==0.5.1
 
 DATABASE_URL=postgres://cabot:cabot@localhost:5432/index
 DJANGO_SETTINGS_MODULE=cabot.settings
@@ -36,6 +36,10 @@ GRAPHITE_PASS=password
 # Hipchat integration
 HIPCHAT_ALERT_ROOM=48052
 HIPCHAT_API_KEY=your_hipchat_api_key
+
+# Slack integration
+SLACK_ALERT_CHANNEL=channel-name
+SLACK_WEBHOOK_URL=url_of_your_webhook_integration_from_slack
 
 # Jenkins integration
 JENKINS_API=https://jenkins.example.com/
